--- a/Catalog.html
+++ b/Catalog.html
@@ -52,18 +52,22 @@
 						<table id="dataTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
 							<thead>
 							  <tr>
-								<th>Nombre</th>
-								<th>SKU</th>
-								<th>Estado</th>
-								<th>Descripción</th>
+								<th>Name</th>
+								<th>Position</th>
+								<th>Office</th>
+								<th>Age</th>
+								<th>Start date</th>
+								<th>Salary</th>
 							  </tr>
 							</thead>
 							<tfoot>
 							  <tr>
-								<th>Nombre</th>
-								<th>SKU</th>
-								<th>Estado</th>
-								<th>Descripción</th>
+								<th>Name</th>
+								<th>Position</th>
+								<th>Office</th>
+								<th>Age</th>
+								<th>Start date</th>
+								<th>Salary</th>
 							  </tr>
 							</tfoot>
 							<tbody>
@@ -72,9 +76,26 @@
 								<td>System Architect</td>
 								<td>Edinburgh</td>
 								<td>61</td>
-
+								<td>2011/04/25</td>
+								<td>$320,800</td>
 							  </tr>
-
+							  <tr>
+								<td>Tiger Nixon</td>
+								<td>System Architect</td>
+								<td>Edinburgh</td>
+								<td>61</td>
+								<td>2011/04/25</td>
+								<td>$320,800</td>
+							  </tr>
+							  
+							  <tr>
+								<td>Tiger Nixon</td>
+								<td>System Architect</td>
+								<td>Edinburgh</td>
+								<td>61</td>
+								<td>2011/04/25</td>
+								<td>$320,800</td>
+							  </tr>
 	
 							</tbody>
 						</table>
@@ -107,8 +128,6 @@
 
 	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-auth.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-database.js"></script>
-
 	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-analytics.js"></script>
 
     <script src="/JS/Main.js"></script>
